app/styles/main.scss
*, *:before, *:after {
  box-sizing: border-box;
}

body {
  background: url('../images/whitey.png') repeat;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

html, body, section[role="main"] {
  width: 100%;
  height: 100%;
  margin: 0;
}

section[role="main"] {
  display: flex;
}

.video-chat {
  flex: 0 0 70%;
  position: relative;
  &.started {
    &:hover .icon-phone-hang-up {
      opacity: 1;
    }
    .icon-phone {
      display: none;
      visibility: hidden;
    }
  }
}

.message-chat {
  height: 100%;
  width: 100%;
  border-left: 1px solid #bbb;
  background: #fff;
  padding: 2em;
  box-shadow: 10px 0 20px rgba(0, 0, 0, 0.2) inset;
  position: relative;
  ul {
    max-height: 90%;
    width: 100%;
    bottom: 10%;
    position: absolute;
    list-style: none;
    margin: 0;
    padding: 0;
    overflow: scroll;
    li {
      padding: 0.5em 0;
    }
    header {
      margin-bottom: 0.2em;
    }
    .name {
      font-weight: bold;
      font-size: 0.9em;
      color: #666;
      margin-right: 0.5em;
    }
    .time {
      font-size: 0.8em;
      color: #888;
    }
  }
  form {
    position: absolute;
    bottom: 3%;
    left: 5%;
    right: 5%;
    input {
      position: relative;
      width: 100%;
      border-radius: 5px;
      padding: 1em;
      font-size: 0.8em;
      box-shadow: none;
      border: 1px solid #ccc;
    }
  }
  button {
    visibility: hidden;
    display: none;
  }
}

.controls {
  position: absolute;
  top: 40%;
  left: 40%;
}

.phone {
  padding: 0.7em;
  font-size: 2.3em;
  border-radius: 50%;
  background: #00E200;
  border: none;
  color: #fff;
  cursor: pointer;
  box-shadow: none;
}

.phone.icon-phone-hang-up {
  background: red;
  transition: opacity 1s ease-in-out;
}

.opacity-hidden {
  opacity: 0;
}

#remote-video {
  width: 100%;
}

#local-video {
  width: 300px;
  position: absolute;
  right: 3%;
  bottom: 3%;
  &.streaming {
    box-shadow: 0 0 35px rgba(0, 0, 0, 0.4);
  }
}

@font-face {
	font-family: 'chat';
	src:url('fonts/chat.eot?-jt39d9');
	src:url('fonts/chat.eot?#iefix-jt39d9') format('embedded-opentype'),
		url('fonts/chat.woff?-jt39d9') format('woff'),
		url('fonts/chat.ttf?-jt39d9') format('truetype'),
		url('fonts/chat.svg?-jt39d9#chat') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
	font-family: 'chat';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.icon-phone:before {
	content: "\e600";
}
.icon-phone-hang-up:before {
	content: "\e601";
}

